@@ -9,7 +9,7 @@ Date: 2024-12-30
     - Added the option to always show the "display-radius"
     - Added toggles to show quality background colour and/or quality icon
     - Draw modules and filters on mining drills
-    - Add item requests (modules/train fuel)
+    - Add item requests (modules, train fuel, etc.)
 
   Changes:
     - Adjusted sprite offsets on combinators
@@ -18,6 +18,7 @@ Date: 2024-12-30
     - Slightly reduced sprite background sizes
     - Sprites are now drawn behind alert icons
     - Thumbnail updated
+    - Pumps show their filter instead of their contents
 
   Bugfixes:
     - Fixed crash when checking constant combinators
